Email OTP (Verify & Reset) MVP

--- a/src/MyCabs.Api/appsettings.Development.json
+++ b/src/MyCabs.Api/appsettings.Development.json
@@ -1,10 +1,25 @@
 {
-  "Mongo": { "ConnectionString": "mongodb://localhost:27017", "Database": "mycabs" },
+  "Mongo": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "Database": "mycabs"
+  },
   "Jwt": {
     "Issuer": "mycabs.local",
     "Audience": "mycabs.local",
     "Key": "CHANGE_THIS_TO_A_LONG_RANDOM_SECRET",
     "AccessTokenMinutes": 120
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Email": {
+    "Provider": "DevConsole",
+    "FromName": "MyCabs OTP",
+    "FromAddress": "noreply@mycabs.local",
+    "Smtp": {
+      "Host": "smtp.gmail.com",
+      "Port": 587,
+      "User": "",
+      "Pass": "",
+      "EnableSsl": true
+    }
+  }
 }
