--- a/src/MyCabs.Infrastructure/MyCabs.Infrastructure.csproj
+++ b/src/MyCabs.Infrastructure/MyCabs.Infrastructure.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyCabs.Domain\MyCabs.Domain.csproj" />
+    <ProjectReference Include="..\MyCabs.Application\MyCabs.Application.csproj" />
   </ItemGroup>
 
 </Project>
